adjusting size of home page wellness cruise last paragraph fontSize Issue

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -333,7 +333,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     html body .service-showcase-content p,
     html body .service-showcase-content p:first-child,
     html body .service-showcase-content p:last-child,
-    html body .service-showcase-content *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6),
+    html body .service-showcase-content *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(strong):not(b),
     html body .carousel-two-column-body,
     html body .carousel-two-column-section .carousel-two-column-body,
     html body .product-description-content,
