--- a/snippets/product-details.liquid
+++ b/snippets/product-details.liquid
@@ -46,7 +46,7 @@
   {%- comment -%} Find blocks that come after product-details block {%- endcomment -%}
   {% if section_block.id == product_details_block_id %}
     {% assign found_product_details = true %}
-  {% elsif found_product_details and section_block.type != 'product-details' and section_block.type != 'product-media-gallery' %}
+  {% elsif found_product_details and section_block.type != 'product-details' and section_block.type != 'product-media-gallery' and section_block.type != 'product-description' %}
     <div class="product-details-block mb-4" {{ section_block.shopify_attributes }}>
       {% case section_block.type %}
         {% when 'text' %}
@@ -58,19 +58,7 @@
             {{ section_block.settings.richtext }}
           </div>
         {% when 'product-description' %}
-          {% if product.description != blank %}
-            {%- liquid
-              assign desc_alignment = section_block.settings.text_alignment | default: 'left'
-              assign desc_max_width = section_block.settings.max_width | default: 0
-              assign desc_custom_class = section_block.settings.custom_css_class | default: ''
-            -%}
-            <div class="product-description-block{% if desc_custom_class != blank %} {{ desc_custom_class }}{% endif %}"
-                 style="text-align: {{ desc_alignment }};{% if desc_max_width and desc_max_width > 0 %} max-width: {{ desc_max_width }}px; margin-left: auto; margin-right: auto;{% endif %}">
-              <div class="product-description-content">
-                {{ product.description }}
-              </div>
-            </div>
-          {% endif %}
+          {%- comment -%} Product description blocks are now rendered directly in product-main-content.liquid to respect block order {%- endcomment -%}
         {% when 'html' %}
           <div class="product-details-html">
             {{ section_block.settings.html }}
