adjusting size of home page wellness cruise last paragraph fontSize Issue

--- a/sections/product-main.liquid
+++ b/sections/product-main.liquid
@@ -536,7 +536,8 @@
           "type": "color",
           "id": "background_color",
           "label": "Background Color",
-          "info": "Background color for the product description block"
+          "info": "Background color for the product description block",
+          "default": "#FFFFFF"
         },
         {
           "type": "select",
